# SlowQuant

./: README.md  a1.py  a2.py  p1.py  propagate.cpp
CPP/: fermionic_operator.hpp  fermionic_operator_py.cpp  m3.cu  main.cpp  operators.hpp  propagate.cpp  setup.py  t1.cpp
CUDA/: CMakeLists.txt
CUDA/src/: kernels.cu  m3.cu  m4.cu  prop.cu  propagate.cu
slowquant/molecularintegrals/: integralfunctions.py
slowquant/unitary_coupled_cluster/: fermionic_operator.py  operator_state_algebra.py  operators.py  sa_adapt_wavefunction.py  util.py
